--- a/index.html
+++ b/index.html
@@ -30,9 +30,7 @@
         </nav>
       </header>
 
-      <main>
-        <section id="hero" class="section-wrapper red-area"></section>
-      </main>
+      <main></main>
     </div>
   </body>
 </html>
