feat: create hero section

--- a/index.html
+++ b/index.html
@@ -16,21 +16,42 @@
 
   <body>
     <div class="container">
-      <header class="red-area">
-        <a href="/">
-          <img src="/images/logo.svg" alt="" />
-        </a>
-        <nav>
-          <ul>
-            <li><a href="#">Sobre mim</a></li>
-            <li><a href="#">Educação</a></li>
-            <li><a href="#">Projetos</a></li>
-            <li><a href="#">Contato</a></li>
-          </ul>
-        </nav>
+      <header>
+        <div class="header-container">
+          <a href="/">
+            <img src="/images/logo.svg" alt="" />
+          </a>
+
+          <nav>
+            <ul>
+              <li><a href="#">Sobre mim</a></li>
+              <li><a href="#">Educação</a></li>
+              <li><a href="#">Projetos</a></li>
+              <li><a href="#">Contato</a></li>
+            </ul>
+          </nav>
+        </div>
       </header>
 
-      <main></main>
+      <main>
+        <section id="hero" class="section-wrapper red-area">
+          <div>
+            <img
+              src="/images/mulher-com-um-moletom-cinza-com-as-maos-no-bolso-na-frente-de-uma-cabine-telefonica-vermelha.png"
+              alt=""
+            />
+          </div>
+
+          <div class="text-container">
+            <span>Desenvolvedora de Software</span>
+            <h1>Clara Moreira</h1>
+            <p>
+              Vamos tirar suas ideias do papel e criar uma aplicação dinâmica,
+              fácil de usar e que realmente ajuda seus clientes no dia a dia?
+            </p>
+          </div>
+        </section>
+      </main>
     </div>
   </body>
 </html>
