--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <title>Clara Moreira | Portfolio</title>
+
     <link
       href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap"
       rel="stylesheet"
@@ -24,10 +25,10 @@
 
           <nav>
             <ul>
-              <li><a href="#">Sobre mim</a></li>
-              <li><a href="#">Educação</a></li>
-              <li><a href="#">Projetos</a></li>
-              <li><a href="#">Contato</a></li>
+              <li><a href="#about">Sobre mim</a></li>
+              <li><a href="#education">Educação</a></li>
+              <li><a href="#projects">Projetos</a></li>
+              <li><a href="#contact">Contato</a></li>
             </ul>
           </nav>
         </div>
@@ -49,6 +50,38 @@
               Vamos tirar suas ideias do papel e criar uma aplicação dinâmica,
               fácil de usar e que realmente ajuda seus clientes no dia a dia?
             </p>
+
+            <footer>
+              <a href="#contact" class="secondary-button">Baixar CV</a>
+              <a href="#contact" class="primary-button">Vamos conversar</a>
+            </footer>
+          </div>
+        </section>
+
+        <section id="about" class="section-wrapper">
+          <div class="text-container">
+            <h2 class="title-h2">Sobre mim</h2>
+
+            <p>
+              Sou desenvolvedora Front-end há pouco mais de dois anos e trazer
+              ideias para o virtual me deixa muito empolgada!
+            </p>
+
+            <p>
+              Tenho experiência com Vue.js e Nuxt, TailwindCSS, integração com
+              APIs, e atualmente estou cursando a graduação de Engenharia de
+              Software.
+            </p>
+
+            <p>
+              Amo ficar em casa com meu marido e meu cachorrinho, Mike Tyson!
+              Também adoro a época de São João para passear com minha família e
+              amigos.
+            </p>
+          </div>
+
+          <div>
+            <img src="/images/about.png" alt="" />
           </div>
         </section>
       </main>
