feat: create education section

--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
             </p>
 
             <p>
-              Tenho experiência com Vue.js e Nuxt, TailwindCSS, integração com
-              APIs, e atualmente estou cursando a graduação de Engenharia de
-              Software.
+              Tenho experiência com Vue.js e Nuxt, JavaScript e TypeScript,
+              integração com APIs, e atualmente estou cursando a graduação de
+              Engenharia de Software.
             </p>
 
             <p>
@@ -82,6 +82,56 @@
 
           <div>
             <img src="/images/about.png" alt="" />
+          </div>
+        </section>
+
+        <section id="education" class="section-wrapper">
+          <div>
+            <h2 class="title-h2">Educação</h2>
+            <img
+              src="/images/armario-com-livros-em-cima-vaso-com-cacto-ao-lado-e-abajur-vermelho.png"
+              alt=""
+            />
+          </div>
+
+          <div class="text-container">
+            <div class="card">
+              <img src="/images/icon-university.svg" alt="">
+
+              <div>
+                <span class="period">2025-2029</span>
+                <h3 class="title-h3">Graduação em Engenharia de Software</h3>
+                <span class="university">
+                  Centro Universitário Internacional UNINTER
+                </span>
+              </div>
+            </div>
+
+            <div class="card">
+              <img src="/images/icon-university.svg" alt="">
+
+              <div>
+                <span class="period">2013-2018</span>
+                <h3 class="title-h3">Graduação em Odontologia</h3>
+                <span class="university">
+                  Universidade de Pernambuco
+                </span>
+              </div>
+            </div>
+
+              <footer>
+                <div>
+                  <img src="/images/icon-laptop.svg" width="32" alt="" />
+                  <span>Stacks: HTML, CSS, JavaScript, Vue.js, React.js</span>
+                </div>
+  
+                <div>
+                  <img src="/images/icon-globe.svg" width="32" alt="" />
+                  <span>Inglês: avançado</span>
+                </div>
+              </footer>
+            </div>
+
           </div>
         </section>
       </main>
