feat: create projects section

--- a/index.html
+++ b/index.html
@@ -131,6 +131,38 @@
                 </div>
               </footer>
             </div>
+          </div>
+        </section>
+
+        <section id="projects" class="section-wrapper">
+          <h2 class="title-h2">Projetos</h2>
+
+          <div class="cards-container">
+            <a href="https://claramoreira.dev.br/"  target="_blank">
+              <div class="image-container">
+                <img src="/images/projeto-portfolio.png" alt="">
+              </div>
+
+              <span>Meu Portfolio</span>
+            </a>
+
+            <a href="https://read-dear.vercel.app/" target="_blank">
+              <div class="image-container">
+                <img src="/images/projeto-read-dear.png" alt="">
+              </div>
+
+              <span>Read, dear</span>
+            </a>
+
+            <a href="https://mrtsushiuk.vercel.app/" target="_blank">
+              <div class="image-container">
+                <img src="/images/projeto-mrt-sushi.png" alt="">
+              </div>
+
+              <span>Mr. T Sushi</span>
+            </a>
+            
+
 
           </div>
         </section>
