--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <title>Clara Moreira | Portfolio</title>
@@ -161,12 +162,13 @@
 
               <span>Mr. T Sushi</span>
             </a>
-            
-
-
           </div>
         </section>
       </main>
+
+      <footer>
+        <span>Feito por <a href="">Clara Moreira</a> ⭐</span>
+      </footer>
     </div>
   </body>
 </html>
