--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
             </p>
 
             <div class="buttons-container">
-              <a href="#contact" class="secondary-button">Baixar CV</a>
+              <a href="/cv.pdf" target="_blank" class="secondary-button"
+                >Baixar CV</a
+              >
               <a href="#contact" class="primary-button">Vamos conversar</a>
             </div>
           </div>
