fix: add responsive breakpoints

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
   <body>
     <div class="container">
+      <!-- Cabeçalho -->
       <header>
         <div class="header-container">
           <a href="/">
@@ -36,6 +37,7 @@
       </header>
 
       <main>
+        <!-- Primeira seção: hero -->
         <section id="hero" class="section-wrapper red-area">
           <div>
             <img
@@ -46,7 +48,7 @@
 
           <div class="text-container">
             <span>Desenvolvedora de Software</span>
-            <h1>Clara Moreira</h1>
+            <h1 class="title-h1">Clara Moreira</h1>
             <p>
               Vamos tirar suas ideias do papel e criar uma aplicação dinâmica,
               fácil de usar e que realmente ajuda seus clientes no dia a dia?
@@ -61,6 +63,7 @@
           </div>
         </section>
 
+        <!-- Segunda seção: sobre mim -->
         <section id="about" class="section-wrapper">
           <div class="text-container">
             <h2 class="title-h2">Sobre mim</h2>
@@ -88,13 +91,17 @@
           </div>
         </section>
 
+        <!-- Terceira seção: educação -->
         <section id="education" class="section-wrapper">
           <div>
             <h2 class="title-h2">Educação</h2>
-            <img
-              src="/images/armario-com-livros-em-cima-vaso-com-cacto-ao-lado-e-abajur-vermelho.png"
-              alt=""
-            />
+            <div>
+              <img
+                src="/images/armario-com-livros-em-cima-vaso-com-cacto-ao-lado-e-abajur-vermelho.png"
+                class="education-image"
+                alt=""
+              />
+            </div>
           </div>
 
           <div class="text-container">
@@ -134,6 +141,7 @@
           </div>
         </section>
 
+        <!-- Quarta seção: projetos -->
         <section id="projects" class="section-wrapper">
           <h2 class="title-h2">Projetos</h2>
 
@@ -234,6 +242,7 @@
       </main>
     </div>
 
+    <!-- Rodapé -->
     <footer>
       <span>Feito por <a href="">Clara Moreira</a> ⭐</span>
     </footer>
