feat: add basic form validation

--- a/index.html
+++ b/index.html
@@ -172,11 +172,12 @@
           </div>
         </section>
 
+        <!-- Quinta seção: contato -->
         <section id="contact" class="section-wrapper">
           <div class="form-container">
             <h2 class="title-h2">Contato</h2>
 
-            <form method="POST">
+            <form id="contact-form">
               <div class="input-box">
                 <label for="username"> Nome </label>
                 <input
@@ -246,5 +247,7 @@
     <footer>
       <span>Feito por <a href="">Clara Moreira</a> ⭐</span>
     </footer>
+
+    <script src="/main.js"></script>
   </body>
 </html>
